--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is an example project</h1>
+    <h1>Hello! I`m starting.</h1>
 </body>
 </html>
